# tm2d

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test.py  test0.py  test1.py  test_data.py  test_norm.py  test_pipeline.py  test_real_data.py  test_sim.py  test_whitener.py
.github/workflows/: python-publish.yml
examples/: 2_phase_search.py  batched_searched.py  diyplot.py
tm2d/: __init__.py  base_comparator.py  base_results.py  base_template.py  cross_correlation.py  ctf.py  micrograph.py  orientation_sampling.py  param_set.py  plan.py  plan_standard.py  results_per_param.py  results_per_pixel.py  template_atomic.py  template_density.py
tm2d/comparators/: cross_correlation.py
tm2d/ctf/: ctf.py  ctf_params.py  ctf_set.py
tm2d/results/: per_param.py  per_pixel.py
tm2d/simulators/: image.py  transfer_function.py
tm2d/templates/: atomic.py  density.py
tm2d/utilities/: __init__.py  data_handler.py  fftshift_util.py  file_loading.py  image_processing.py  optics_functions.py  rotation_matricies.py  signal_normalization.py  whitener.py
